added ReadMe.md as well as screenshot image for the ReadMe. Also added a href links to the deployed application now that it is live

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <li><h3><a href="https://everhandy.github.io/Unique-NY-Challenge-1/">Project 1: HTML</a></h3>
                 <a href="https://everhandy.github.io/Unique-NY-Challenge-1/"><img src="./Assets/HTML-project-img.png" class= "work-img" id="html-img" alt="Image of HTML Project"></a>
             </li>
-            <li><h3><a href="#title-card">Project 2: CSS</a></h3>
-                <a href="#title-card"><img src="./Assets/css-project-img.png" class= "work-img" class="css-img" alt="Image of CSS Project"></a>
+            <li><h3><a href="https://everhandy.github.io/Pleasurable-Portfolio-Project/">Project 2: CSS</a></h3>
+                <a href="https://everhandy.github.io/Pleasurable-Portfolio-Project/"><img src="./Assets/css-project-img.png" class= "work-img" class="css-img" alt="Image of CSS Project"></a>
             </li>
             <li><h3>Project 3: JavaScript</h3><img src="./Assets/work in progress.jpg" class= "work-img" id="js-img" alt="Work In Progress Image">
             </li>
