updated with recent projects

--- a/index.html
+++ b/index.html
@@ -34,12 +34,15 @@
             <li><h3><a href="https://everhandy.github.io/Unique-NY-Challenge-1/">Project 1: HTML</a></h3>
                 <a href="https://everhandy.github.io/Unique-NY-Challenge-1/"><img src="./Assets/HTML-project-img.png" class= "work-img" id="html-img" alt="Image of HTML Project"></a>
             </li>
-            <li><h3><a href="https://everhandy.github.io/Pleasurable-Portfolio-Project/">Project 2: CSS</a></h3>
-                <a href="https://everhandy.github.io/Pleasurable-Portfolio-Project/"><img src="./Assets/css-project-img.png" class= "work-img" class="css-img" alt="Image of CSS Project"></a>
+            <li><h3><a href="#title-card">Project 2: CSS</a></h3>
+                <a href="#title-card"><img src="./Assets/css-project-img.png" class= "work-img" class="css-img" alt="Image of CSS Project"></a>
             </li>
-            <li><h3>Project 3: JavaScript</h3><img src="./Assets/work in progress.jpg" class= "work-img" id="js-img" alt="Work In Progress Image">
+            <li><h3><a href="https://everhandy.github.io/Perplexing-Password-Generator-Project/">Project 3: JavaScript</a></h3><img src="./Assets/JavaScript-Project-IMG.png" class= "work-img" id="js-img" alt="Work In Progress Image">
             </li>
-            <li><h3>Project 4: APIs</h3><img src="./Assets/work in progress.jpg" class= "work-img" id="api-img" alt="Work In Progress Image">
+            <li><h3><a href="https://everhandy.github.io/Wonderful-Web-APIs-Quiz-Project/">Project 4: APIs</a></h3><img src="./Assets/Quiz-Screenshot.png" class= "work-img" id="api-img" alt="Work In Progress Image">
+            </li>
+            </li>
+            <li><h3><a href="https://vin7ag3.github.io/team2/">Group Project 1: Furever Friend Finder</a></h3><img src="./Assets/Project-1-Img - Copy.png" class= "work-img" id="api-img" alt="Work In Progress Image">
             </li>
         </ul>
     </section>
